--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "bidify-app",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.0.5"
-  }
+	"name": "bidify-app",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.18.0",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.18.0",
+		"globals": "^15.14.0",
+		"postcss": "^8.5.1",
+		"tailwindcss": "^3.4.17",
+		"vite": "^6.0.5"
+	}
 }
